<resources>
    <string name="app_name">Digital Police</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cameras">Camera</string>
    <string name="notification">Notification</string>
    <string name="histories">History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_name">BSD City, South Tanggerang</string>
    <string name="cctv_name">CCTV Name 1</string>
    <string name="time">1:45 PM</string>
    <string name="type">Robbery</string>
    <string name="event">Crime detected in </string>
    <string name="details"><u>details</u></string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="subscribe_to_news">Subscribe to news</string>
    <string name="log_token">Log token</string>
    <string name="default_notification_channel_name">News</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="detail">Anomaly Detail</string>
    <string name="type_of_anomaly">Tipe Anomaly</string>
    <string name="waktu_kejadian">Time</string>
    <string name="cctv">CCTV</string>
    <string name="lokasi">Location</string>
    <string name="dash">-</string>
</resources>