<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="180dp"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_weight="1"
    app:cardCornerRadius="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_item_cardview">

        <TextView
            android:id="@+id/cctv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/cctv_name"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/location_name"
            android:textColor="#737373"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/cctv_name"
            app:layout_constraintTop_toBottomOf="@+id/cctv_name" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            android:textColor="#737373"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/location_name"
            app:layout_constraintTop_toBottomOf="@+id/location_name" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/type"
            android:textColor="#737373"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/time"
            app:layout_constraintTop_toBottomOf="@+id/time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>