<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity"
    android:background="@drawable/bg_main">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/detail"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDetail"
        android:layout_width="340dp"
        android:layout_height="300dp"
        app:cardBackgroundColor="@color/yellow_x"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/time"
                style="@style/tvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/waktu_kejadian"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_received"
                style="@style/tvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginTop="16dp"
                android:text="@string/dash"
                app:layout_constraintStart_toEndOf="@+id/time"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cctv"
                style="@style/tvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/cctv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time" />

            <TextView
                android:id="@+id/cctv_received"
                style="@style/tvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginTop="16dp"
                android:text="@string/dash"
                app:layout_constraintStart_toEndOf="@+id/cctv"
                app:layout_constraintTop_toBottomOf="@+id/time_received" />

            <TextView
                android:id="@+id/location"
                style="@style/tvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lokasi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cctv" />

            <TextView
                android:id="@+id/location_received"
                style="@style/tvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="74dp"
                android:layout_marginTop="16dp"
                android:text="@string/dash"
                app:layout_constraintStart_toEndOf="@+id/location"
                app:layout_constraintTop_toBottomOf="@+id/cctv_received" />

            <ImageButton
                android:id="@+id/btn_play_video"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginBottom="36dp"
                android:scaleType="centerInside"
                android:background="@null"
                android:src="@drawable/green_play_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>